made changes in ipynb file

--- a/C1_W1_Assignment.ipynb
+++ b/C1_W1_Assignment.ipynb
@@ -365,7 +365,7 @@
     "    \n",
     "    ### START CODE HERE ###\n",
     "    # calculate the sigmoid of z\n",
-    "    h = 1/(1 + np.exp(-z))\n",
+    "    h = 1/(1 + np.exp(-np.array(z)))\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return h"
